--- a/lumen/docker-compose.yml
+++ b/lumen/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: root
-            MYSQL_ROOT_DATABASE: lumen
+            MYSQL_DATABASE: lumen
         ports:
             - "1306:3306"
         volumes: 
